ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.austin-ouyang.com
    - www.matrixprofiles.com
    secretName: austin-ouyang-tls
  rules:
  - host: www.austin-ouyang.com
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 80
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: www.matrixprofiles.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mpfrontend
          servicePort: 8080
