ingress/mp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.matrixprofiles.com
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: mpserver
          servicePort: 8081
